Remove/suppress deprecated API usage